# PureRangeImageUnet

./: CMakeLists.txt  README.md  filepath.cpp  read_rimg_bin.cpp  visualize_rimg_pc.cpp  write_rimg_bin.cpp  write_rimg_labels.cpp
colab/: RI_Unet.ipynb  see_label_results.ipynb  semantickitti_evaluation.ipynb
filepaths/: KIITI_filepaths_1.txt
instructions/: 1_pcl
matlab/: View3D_2D.m  View3D_2D.m~  mono_vo_example.m  save_evaluations.m  view_range_images.m
python/: read_create_filepaths.py  view_pointcloud.py
src/: labels_list.txt  visualize_pc.cpp  visualize_rimg_pc.cpp  write_rimg_bin.cpp  write_rimg_labels.cpp  write_rimg_vo_bin.cpp  write_rimg_vo_labels.cpp
